# contextd

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Personal_plan.md  README.md  SECURITY.md  check_output.txt  contextd.db-journal  contextd.example.toml  contextd.toml  curl_output.txt  docker-compose.yml  rust-toolchain.toml  setup_model.sh  verify_phase1.sh  verify_phase5_debounce.sh
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  docker.yml  docs.yml  publish.yml  release.yml
benches/: chunker_bench.rs  db_bench.rs
completions/: _contextd  contextd.bash  contextd.fish
docs/: claude-integration.md  continue-integration.md  mcp-integration.md  models.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  architecture.md  configuration.md  features.md  getting-started.md  index.md  integrations.md  models.md  testing.md  usage.md
docs/book/src/features/: hybrid-search.md  plugin-system.md  search-intelligence.md  smart-chunking.md
homebrew/: contextd.rb
scripts/: bench.sh  install.ps1  install.sh  memory_stress_test.py  pdftotext.sh  playground.sh  test_mcp.py  test_mcp_local.py  verify_mcp.mjs
src/: cli.rs  config.rs  connect.rs  daemon.rs  download.rs  lib.rs  main.rs
src/api/: mod.rs
src/indexer/: chunker.rs  embeddings.rs  ignore.rs  mod.rs  plugins.rs  watcher.rs
src/mcp/: mod.rs  server.rs
src/storage/: db.rs
tests/: README.md  load_test.rs  watcher_test.rs  zero_config_test.rs
(+6 files in other folders)
