[package]
name = "contextd"
version = "1.0.0"
edition = "2021"
authors = ["Santhosh Sachin"]
description = "A local-first, semantic context daemon for AI agents."
license = "MIT"
repository = "https://github.com/sandy-sachin7/contextd"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "8.2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
ort = { version = "2.0.0-rc.4", features = ["ndarray"] }
tokenizers = "0.19"
pdf-extract = "0.7"
chrono = { version = "0.4", features = ["serde"] }
ndarray = "0.15" # Often needed with ort
toml = "0.9.8"
notify-debouncer-mini = "0.7.0"
ignore = "0.4.25"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"

schemars = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
indicatif = "0.17"
lru = "0.12"
futures-util = "0.3" # Useful for stream handling with reqwest


[dev-dependencies]
tempfile = "3.23.0"
